crates/wdl-engine/tests/workflows/enum-unknown-variant/error.txt
error: unknown variant named `InvalidVariant` for enum `Status`
   ┌─ tests/workflows/enum-unknown-variant/source.wdl:10:23
   │
10 │     Status s = Status.InvalidVariant
   │                       ^^^^^^^^^^^^^^ the variant name is referenced here

